add token for dependency-submission maven-build.yaml

--- a/.github/workflows/maven-build.yaml
+++ b/.github/workflows/maven-build.yaml
@@ -27,4 +27,6 @@ jobs:
         run: mvn -B --no-transfer-progress verify --file pom.xml
 
       - name: Submit Dependency Snapshot
-        uses: advanced-security/maven-dependency-submission-action@4f64ddab9d742a4806eeb588d238e4c311a8397d # v4.1.1           
+        uses: advanced-security/maven-dependency-submission-action@4f64ddab9d742a4806eeb588d238e4c311a8397d # v4.1.1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
