--- a/.github/workflows/npm-build.yaml
+++ b/.github/workflows/npm-build.yaml
@@ -32,7 +32,7 @@ jobs:
         run: npm ci --ignore-scripts
         
       - name: Build
-        run: npm run build
+        run: CI=false npm run build
         
       - name: Upload artifact
         if: github.ref == 'refs/heads/main'
