--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -1,4 +1,4 @@
-name: CodeQL
+name: codeQL
 
 on:
   workflow_call:
@@ -6,12 +6,12 @@ on:
       java-version:
         required: false
         type: string
-        default: "21"  
+        default: "21"
       node-version:
         required: false
         type: string
-        default: "20"   
-                        
+        default: "20"
+
 jobs:
   create-matrix:
     runs-on: ubuntu-latest
@@ -25,7 +25,7 @@ jobs:
           access-token: ${{ secrets.GITHUB_TOKEN }}
           endpoint: ${{ github.event.repository.languages_url }}
           exclude: 'c, c++, csharp, go, python, ruby'
-          
+
   analyze:
     needs: create-matrix
     if: ${{ needs.create-matrix.outputs.matrix != '[]' }}
@@ -34,9 +34,9 @@ jobs:
 
     strategy:
       fail-fast: false
-      matrix: 
+      matrix:
         language: ${{ fromJSON(needs.create-matrix.outputs.matrix) }}
- 
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -60,17 +60,17 @@ jobs:
       if: matrix.language == 'javascript'
       uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4.1.0
       with:
-        node-version: ${{ inputs.node-version }}        
- 
+        node-version: ${{ inputs.node-version }}
+
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     - name: Autobuild
       uses: github/codeql-action/autobuild@662472033e021d55d94146f66f6058822b0b39fd # v3.27.0
       with:
         matrix: ${{ matrix.language }}
-     
+
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@662472033e021d55d94146f66f6058822b0b39fd #v3.27.0
       with:
         category: "/language:${{matrix.language}}"
-     
+
