add correct repo name

--- a/.github/workflows/npm-docker-push.yaml
+++ b/.github/workflows/npm-docker-push.yaml
@@ -72,5 +72,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}:${{ steps.buildinfo.outputs.short_sha}}-SHA
+          tags: ${{ env.REGISTRY }}/${{ steps.buildinfo.outputs.owner }}/${{ steps.buildinfo.outputs.repo_name }}:${{ steps.buildinfo.outputs.short_sha}}-SHA
